added GOTO panel delete button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
           <div class="navigation--info">TODO list</div>
         </div>
-        <div class="TODO-list-upcomming header-top-element">
+        <!-- <div class="TODO-list-upcomming header-top-element hidden">
           <div class="navigation--icons">
             <svg class="svg-icon" viewBox="0 0 20 20">
               <path
@@ -44,7 +44,7 @@
             </svg>
           </div>
           <div class="navigation--info">TODO upcomming</div>
-        </div>
+        </div> -->
         <div class="important-TODO-list header-top-element">
           <div class="navigation--icons">
             <svg class="svg-icon" viewBox="0 0 20 20">
@@ -80,8 +80,12 @@
             </form>
           </div>
           <div id="todo-container" class="todo-list-container">
-            <!-- <div class="todo-instance">
+            <div class="todo-instance">
               <div class="todo-description">xzxz</div>
+              <div class="btn-todo-initiation hidden">
+                <button class="btn-delete btn-selector">✔</button>
+                <button class="btn-disregard btn-selector">✖</button>
+              </div>
               <div class="todo-important-mark">
                 <svg class="svg-icon-favorite" viewBox="0 0 20 20">
                   <path
@@ -89,7 +93,7 @@
                   ></path>
                 </svg>
               </div>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
